# GCompris-gtk

./: .cvsignore  .gitignore  AUTHORS  ChangeLog  ChangeLog.pregit  INSTALL  MAINTAINERS  Makefile.activity  Makefile.am  Makefile.in  Makefile.mingw  Makefile.mingw.in  NEWS  README  README.installation  README.macosx  README.mingw  README.mingw-cross  README.translators  README.windows  TESTS  THANKS  TODO  acconfig.h  acinclude.m4  aclocal.m4  autogen.sh  config.h.in  config.h.mingw  config.h.mingw.in  config.h.windows  configure  configure.ac  configure.in  create_dist_sounds  cross-configure.sh  gcompris  gcompris-edit.desktop  gcompris-edit.desktop.in  gcompris-installer.nsi  (+21 more)
boards/: .gitignore  DOCUMENTATIONS  Makefile.am  Makefile.in  README  administration.xml.in  advanced_colors.xml.in  algebra_by.xml  algebra_by.xml.in  algebra_div.xml  algebra_div.xml.in  algebra_group.xml.in  algebra_guesscount.xml.in  algebra_minus.xml  algebra_minus.xml.in  algebra_plus.xml  algebra_plus.xml.in  algebramenu.xml  algebramenu.xml.in  algorithm.xml.in  anim.xml.in  awele.xml.in  babymatch.xml  babymatch.xml.in  babyshapes.xml  babyshapes.xml.in  ballcatch.xml.in  bargame.xml.in  billard.xml.in  boards.xml.in  braille.xml.in  canal_lock.xml.in  chat.xml.in  chess.xml.in  chess_computer.xml.in  chess_movelearn.xml.in  chess_partyend.xml.in  chronos.xml.in  click_on_letter.xml.in  clickanddraw.xml.in  (+150 more)
boards/advanced_colors/: Makefile.am  board1.xml.in  board2.xml.in  board3.xml.in  board4.xml.in  board5.xml.in  board6.xml.in  board7.xml.in  board8.xml.in  board9.xml.in
boards/anim/: animation.js
boards/babymatch/: Makefile.am  board1_0.xml  board1_0.xml.in  board2_0.xml  board2_0.xml.in  board3_0.xml  board3_0.xml.in  board4_0.xml  board4_0.xml.in  board5_0.xml  board5_0.xml.in  board6_0.xml  board6_0.xml.in  board7_0.xml.in
boards/babyshapes/: Makefile.am  board1_0.xml  board1_0.xml.in  board2_0.xml  board2_0.xml.in  board3_0.xml  board3_0.xml.in  board4_0.xml  board4_0.xml.in  board5_0.xml.in  board6_0.xml.in  board7_0.xml.in
boards/boardicons/: README
boards/chess/: .cvsignore
boards/chronos/: Makefile.am  board1_0.xml.in  board1_2.xml.in  board2_0.xml.in  board3_0.xml.in  board3_1.xml.in  board3_2.xml.in  board3_3.xml.in  board3_4.xml.in  board4_0.xml.in  board4_1.xml.in  board4_2.xml.in  board4_3.xml.in
boards/clickgame/: README
boards/connect4/: sablier.txt
boards/dataset/: misc.xml  mrpatate.xml  mrpotato.xml  tuxpaint_pictures.xml  user_pictures.xml
boards/doubleentry/: Makefile.am  board1_0.xml.in  board2_0.xml.in  board3_0.xml.in
boards/flags/: .cvsignore  Makefile.am  README  af.svgz  am.svgz  ar.svgz  ar_TN.svgz  ast.svgz  az.svgz  be.svgz  bg.svgz  br.svgz  ca.svgz  ch.svgz  cs.svgz  da.svgz  de.svgz  dk.svgz  dz.svgz  el.svgz  en.svgz  en_CA.svgz  en_GB.svgz  es.svgz  eu.svgz  fa.svgz  fi.svgz  fr.svgz  ga.svgz  gcompris_flags.assetml.in  gu.svgz  he.svgz  hi.svgz  hr.svgz  hu.svgz  id.svgz  it.svgz  ja.svgz  ka.svgz  ko.svgz  (+33 more)
boards/fontsets/: README
boards/gcompris/: Makefile.am  README  mime_type.xml.in
boards/geography/: Makefile.am  Makefile.in  board1_0.xml.in  board2_0.xml.in  board2_1.xml.in  board3_0.xml.in  board3_1.xml.in  board4_0.xml.in  board4_1.xml.in  board4_2.xml.in  board5_0.xml.in  board6_0.xml.in  board7_0.xml.in  board8_0.xml.in
boards/geography_country/: Makefile.am  board1_0.xml.in  board2_0.xml.in  board3_0.xml.in  board4_0.xml.in  board5_0.xml.in  board5_1.xml.in  board5_2.xml.in  board6_0.xml.in
boards/gletters/: README  gletters.ja  gletters.nb  gletters.ru  gletters.sv
boards/gnumch/: diaper.txt  muncher.txt
boards/imageid/: Makefile.am  board1.xml  board1.xml.in
boards/imagename/: Makefile.am  board1_0.xml  board1_0.xml.in  board2_0.xml  board2_0.xml.in  board3_0.xml  board3_0.xml.in  board4_0.xml  board4_0.xml.in  board5_0.xml  board5_0.xml.in  board6_0.xml  board6_0.xml.in
boards/images/: README
boards/leftright/: background.kpm
boards/mimetypes/: README
boards/missing_letter/: Makefile.am  Makefile.in  board1.xml  board1.xml.in
boards/mrpatate/: README
boards/music/: COPYRIGHT
boards/opt/: README
boards/paintings/: Makefile.am  README  board1_0.xml  board1_0.xml.in  board2_0.xml  board2_0.xml.in  board3_0.xml  board3_0.xml.in  board3_1.xml  board3_1.xml.in  board4_0.xml  board4_0.xml.in  board5_0.xml  board5_0.xml.in  board6_0.xml  board6_0.xml.in  board6_1.xml
boards/read_colors/: Makefile  Makefile.am  Makefile.in  board1.xml
boards/scales/: Makefile.am  Makefile.in  README  board1_0.xml  board1_0.xml.in  board1_1.xml  board1_1.xml.in  board1_2.xml  board1_2.xml.in  board1_3.xml  board1_3.xml.in  board1_4.xml  board1_4.xml.in  board1_5.xml  board1_5.xml.in  board1_6.xml  board2_0.xml  board2_0.xml.in  board2_1.xml  board2_1.xml.in  board2_2.xml  board2_2.xml.in  board2_3.xml  board2_3.xml.in  board2_4.xml  board2_4.xml.in  board2_5.xml  board2_5.xml.in  board2_6.xml  board3_0.xml  board3_0.xml.in  board3_1.xml  board3_1.xml.in  board3_2.xml  board3_2.xml.in  board3_3.xml  board3_3.xml.in  board3_4.xml  board3_4.xml.in  board3_5.xml  (+2 more)
boards/skins/: README
boards/sounds/: HOWTO_ENCODE  Makefile.am  README
boards/submarine/: README
boards/traffic/: README  TrafficData
boards/watercycle/: tuxboat.txt
boards/wordsgame/: README  default-ar_TN.xml  default-da.xml  default-de.xml  default-el.xml  default-en.xml  default-es.xml  default-eu.xml  default-fi.xml  default-fr.xml  default-hu.xml  default-it.xml  default-lt.xml  default-nb.xml  default-nn.xml  default-pt.xml  default-pt_BR.xml  default-ro.xml  (+124 more)
macosx/: .gitignore  GCompris.icns  GComprisAdmin  GComprisAdmin.icns  Info.plist  Info.plist.in  InfoAdmin.plist.in  Makefile.am  PkgInfo  build-gtk.sh  configure_mac.sh  createBundle.sh  gcompris.bundle  launcher.sh  main.c  pangorc
src/: .cvsignore  Makefile.am  Makefile.in  activity.info  bundleit.sh  createit.sh  gcompris-activity  gcompris-instance  old-gcompris-activity  old-gcompris-factory  old-gcompris-instance  runit.sh
sugar/: Makefile.am  gcompris-activity
(+2759 files in other folders)
