## Process this file with automake to produce Makefile.in

if !BUILD_MINGW32
if TEXINFO
DOCS_SUBDIR=docs
else
DOCS_SUBDIR=
endif
else
DOCS_SUBDIR=
endif

SUBDIRS = po src boards $(DOCS_SUBDIR) autopackage sugar

# if OS_MACOSX
# SUBDIRS += macosx
# endif


icondir=$(datadir)/pixmaps
icon_DATA = gcompris.png gcompris-edit.png

if BUILD_MINGW32
Applicationsdir = $(datadir)/
Applications_in_files =
Applications_DATA =
else
Applicationsdir = $(datadir)/applications/
Applications_in_files = gcompris.desktop.in gcompris-edit.desktop.in
Applications_DATA = gcompris.desktop gcompris-edit.desktop
endif

@INTLTOOL_DESKTOP_RULE@

EXTRA_DIST = config.rpath  \
	$(Applications_in_files) \
	$(icon_DATA) \
	intltool-extract.in \
	intltool-merge.in \
	intltool-update.in \
	gnome2-macros/autogen.sh \
	gnome2-macros/compiler-flags.m4 \
	gnome2-macros/curses.m4 \
	gnome2-macros/gnome2-macros.dep \
	gnome2-macros/gnome-autogen.sh \
	gnome2-macros/gnome-common.m4 \
	gnome2-macros/gnome-deprecated-macros.m4 \
	README.mingw README.translators README.windows \
	config.h.mingw.in Makefile.mingw.in global_win32.mak gcompris.ico gc_admin.ico gcompris-uninstal.ico \
	gcompris-installer.nsi.in nsis_translations.desktop.in


distcore = $(PACKAGE)-core-$(VERSION)

install-data-local:
	@$(NORMAL_INSTALL)
	if test -d $(srcdir)/$(PACKAGE_DATA_DIR); then \
	  $(mkinstalldirs) $(DESTDIR)/$(pkgdatadir)/$(PACKAGE_DATA_DIR); \
	  cd $(srcdir)/$(PACKAGE_DATA_DIR) ; tar cf - --dereference --exclude "Makefile.in" --exclude "*.in" --exclude "*~" --exclude "Makefile" --exclude "Makefile.am" --exclude .git * | ( cd $(DESTDIR)/$(pkgdatadir)/$(PACKAGE_DATA_DIR) ; tar xf -) ; cd .. ; \
	fi

dist-hook:
	if test -d $(PACKAGE_DATA_DIR); then \
	  $(mkinstalldirs) $(distdir)/$(PACKAGE_DATA_DIR); \
	  cd $(srcdir)/$(PACKAGE_DATA_DIR) ; tar cf - --dereference --exclude "Makefile.in" --exclude "Makefile" --exclude "*~" --exclude ".*" --exclude .git * | ( cd ../$(distdir)/$(PACKAGE_DATA_DIR) ; tar xf -) ; cd .. ; \
	fi
	@if test -d "$(srcdir)/.git"; \
	then \
		echo Creating ChangeLog && \
		( cd "$(top_srcdir)" && \
		  echo '# Generated by Makefile. Do not edit.'; echo; \
		  $(top_srcdir)/missing --run git log --stat ) > ChangeLog.tmp \
		&& mv -f ChangeLog.tmp $(top_distdir)/ChangeLog \
		|| ( rm -f ChangeLog.tmp ; \
		     echo Failed to generate ChangeLog >&2 ); \
	else \
		echo A git clone is required to generate a ChangeLog >&2; \
	fi


CONFIG_CLEAN_FILES = gcompris.desktop gcompris-edit.desktop config.h.mingw

clean-local:
	rm -f intltool-extract intltool-merge intltool-update

update-voices:
	@if test -d $(PACKAGE_DATA_DIR)/voices; then \
	  cd $(PACKAGE_DATA_DIR)/voices ; git pull; cd -; \
	else \
	  mkdir $(PACKAGE_DATA_DIR)/voices; \
	  cd $(PACKAGE_DATA_DIR) ; git checkout -b voices origin/voices ; cd -; \
	fi

all-local:

install-activity:
	$(MAKE) -C src $@

ACLOCAL_AMFLAGS = -I m4
